refactor: replaced platform threads with virtual threads